# Evidence_protector

./: .coveragerc  .dockerignore  .env.backend.example  .gitignore  DEPLOYMENT_README.md  DEPLOYMENT_SECURITY_CHECKLIST.md  DEPLOY_RENDER_VERCEL.md  DOCKER_SECURITY_HARDENING.md  Dockerfile  Dockerfile.render  GHOST_PROTOCOL_SCOPE.md  GHOST_PROTOCOL_THREAT_MODEL.md  KEY_MANAGEMENT.md  QUICKSTART.md  QUICK_DEPLOY_RENDER_VERCEL.md  README.md  RELEASE_HANDOFF_CHECKLIST.md  SECURITY.md  SECURITY_OPERATIONS.md  app.py  docker-compose.yml  evidence_protector.py  evidence_protector_api.py  evidence_protector_legacy_stdlib.py  main.py  package.json  pyproject.toml  render.yaml  requirements.txt  sample.manifest.json  start-backend.bat  start-backend.sh  tamper_report.json  tampered.manifest.json  test_api_contract.py  test_evidence_protector.py  test_ghost_extras.py  test_ghost_protocol.py  test_key_lifecycle.py  vercel.json
.github/workflows/: ci.yml
Evidence Protector Web UI/: .env.frontend.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
Evidence Protector Web UI/scripts/: capture-release-evidence.mjs  e2e-ui-flows.mjs
artifacts/performance/: budgets.json  replay-benchmark.final.json  (+1 more)
scripts/: build-standalone.ps1  build-standalone.sh  capture-release-evidence.ps1  capture-release-evidence.sh  check_performance_budget.py  deploy-render-vercel.sh  docker-smoke-test.ps1  docker-smoke-test.sh  ep_launcher.py  release-cli.sh  release_bundle.py  replay_benchmark.py  security-verify.sh
(+40 files in other folders)
