[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-protector"
version = "0.1.0"
description = "Automated Log Integrity Monitor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "python-dateutil>=2.8",
]

[project.scripts]
evidence_protector = "evidence_protector:main"

[tool.setuptools]
py-modules = ["evidence_protector"]
